@@ -34,6 +34,7 @@ Other features
  * Improved error message on incorrect ``{% image %}`` tag syntax (LB (Ben Johnston))
  * Optimized preview data storage (Bertrand Bordage)
  * Added `render_landing_page` method to `AbstractForm` to be easily overridden and pass `form_submission` to landing page context (Stein Strindhaug)
+ * Added `heading` kwarg to `InlinePanel` to allow heading to be set independently of button label (Adrian Turjak)
 
 Bug fixes
 ~~~~~~~~~
